[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
ff = "0.13.0"
hex = "0.4"
ecc = { path = "../ecc", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

[features]
default = []
circuit-params = ["ecc/circuit-params"]
